add  web crawling notebook+ corrections notebooks

--- a/notebooks/0_nlp_intro_schlaak_weise.ipynb
+++ b/notebooks/0_nlp_intro_schlaak_weise.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Projekt - Natural Language Processing (SoSe 20)\n",
     "\n",
-    "In diesem Projekt möchten wir uns, anhand eines realitätsnahen Anwendungsfalls, mit der Analyse natürlicher Sprache beschäftigen. Hierzu haben wir verschiedene Anforderungen an Themen definiert, welche wir in Ihrer Vorlesung kennen gelernt haben und im Folgenden anwenden.\n",
+    "Dieses Projekt befasst sich anhand eines realitätsnahen Anwendungsfalls mit der Analyse natürlicher Sprache. Hierzu wurden verschiedene Anforderungen an Themen definiert, welche die Vorlesungsinhalte des Fachs \"Natural Language Processing\" wiederspiegeln.\n",
     "\n",
-    "Generell ermöglichen alle hier hervorgehobenen Hyperlinks eine Navigation zwischen den einzelnen Notebooks. Am Ende jedes Notebooks finden Sie jeweils einen Link, welche eine Navigation zum nächsten Notebook, sowie zurück zur Übersicht ermöglicht.\n",
+    "Alle hier hervorgehobenen Hyperlinks bieten eine Navigation zwischen den einzelnen Notebooks. Am Ende jedes Notebooks findet sich jeweils ein Link, welcher eine Navigation zum nächsten Notebook, sowie zurück zur Übersicht, ermöglicht.\n",
     "\n",
     "### Authoren\n",
     "\n",
@@ -19,7 +19,7 @@
     "\n",
     "### Setup\n",
     "\n",
-    "Zu einem erfolgreichen Ausführen dieser Notebooks empfehlen wir die Nutzung von `Python 3.8.2`. Ebenso sollte eine virtuelle Umgebung erstellt werden, in welcher die in der `requirements.txt` aufgelisteten Module installiert werden sollten. Im folgenden Codeausschnitt wird dargestellt, wie ein solches Setup realisiert werden kann.\n",
+    "Zu einem erfolgreichen Ausführen dieser Notebooks wird die Nutzung von `Python 3.8.2` empfohlen. Ebenso sollte eine virtuelle Umgebung erstellt werden, in welcher die in der `requirements.txt` aufgelisteten Module installiert werden sollten. Im folgenden Codeausschnitt wird dargestellt, wie ein solches Setup realisiert werden kann.\n",
     "\n",
     "```bash\n",
     "cd /dieses/projekt/verzeichnis\n",
@@ -33,15 +33,15 @@
     "* [Python 3.8.2](https://www.python.org/downloads/release/python-382/)\n",
     "* Module siehe [requirements.txt](./requirements.txt)\n",
     "\n",
-    "Achtung: Die Laufzeitdauer mancher Codezellen ist sehr hoch. Sämtliche Outputs wurden deshalb bereits von uns generiert. Wir empfehlen daher lediglich das Durchlesen der Notebooks. Gerade bei der Anwendung des Clustering-Algorithmus kann es ebenfalls zu Abweichungen oder einer anderen Reihenfolge der Cluster kommen.\n",
+    "Achtung: Die Laufzeitdauer mancher Codezellen ist sehr hoch. Sämtliche Outputs wurden deshalb bereits von uns generiert. Wir empfehlen daher lediglich das Durchlesen der Notebooks. Insbesondere bei der Anwendung des Clustering-Algorithmus kann es zu Abweichungen oder einer anderen Reihenfolge der Cluster kommen.\n",
     "\n",
     "## Problemstellung\n",
     "\n",
-    "Unsere Idee beruht auf dem Gedanken der Empfehlung ähnlicher Titel bei der Wiedergabe von Filmen auf Streaming Plattformen. Dienstleister wie beispielsweise [Netflix](https://www.netflix.com/de-en/) nutzen bereits solche Funktionalität in ihrem System (siehe Abbildung), verwenden vermutlich jedoch verschiedenste Ansätze für die Generierung von Vorschlägen.  \n",
+    "Die Projektidee ist aus den Empfehlungslisten für ähnliche Titel bei der Filmwiedergabe auf Streaming-Plattformen bekannt: Firmen wie beispielsweise [Netflix](https://www.netflix.com/de-en/) nutzen bereits solche Funktionalität in ihrem System (siehe Abbildung), wobei verschiedenste Ansätze für die Generierung dieser Vorschläge existieren.  \n",
     "\n",
     "![Netflix - Filmvorschläge](./imgs/netflix.png)\n",
     "\n",
-    "Welche Datenbasis hierfür verwendet wird ist unklar. Es kommen generell mehrere Quellen in Frage:\n",
+    "Welche Datenbasis für die Vorschläge verwendet wird ist unklar. Es kommen mehrere Quellen in Frage:\n",
     "\n",
     "* Bewertungen des Nutzers\n",
     "* Streaming-Verlauf des Nutzers\n",
@@ -50,11 +50,11 @@
     "* Filmneuheiten\n",
     "* etc.\n",
     "\n",
-    "Wir möchten in diesem Projekt lediglich Handlungsinhalte aus Zusammenfassungen der Filmbeschreibung, konkret nur natürlicher Sprache in Textform, als Datenbasis für die Empfehlung ähnlicher Filme nutzen und somit untersuchen, wie gut sich lediglich diese Datenbasis für ein Clustering und Empfehlung ähnlicher Titel eignen.\n",
+    "Dieses Projekt beschränkt sich auf Handlungsinhalte aus Zusammenfassungen der Filmbeschreibung in natürlicher Sprache und in Textform, um die Empfehlung ähnlicher Filme zu generieren und zu untersuchen, wie gut sich diese Datenbasis für ein Clustering eignet.\n",
     "\n",
     "## Gliederung\n",
     "\n",
-    "Mithilfe eines Crawlers soll eine Datenbasis verschiedener Filme generiert werden. Im Folgenden soll ein erstes Sichten der Daten erfolgen, um die Korrektheit der Daten sicherstellen zu können. Anschließend werden alle Daten dahingehend vorverarbeitet, dass eine spätere Analyse möglich ist. Zuletzt soll eine Analyse der Filmdaten durchgeführt werden. Hierbei sollen alle Einträge mithilfe eines k-Means-Clustering-Algorithmus einem Genre zugeordnet werden. Ebenfalls soll eine Ähnlichkeitsanalyse durchgeführt werden, womit eine Empfehlung ähnlicher Titel ermöglicht werden soll.\n",
+    "Mithilfe eines Web Crawlers wird eine Datenbasis verschiedener Filme generiert. Im Folgenden erfolgt ein erstes Sichten der Daten, um die Korrektheit der Daten sicherstellen zu können. Anschließend werden alle Daten dahingehend vorverarbeitet, dass eine spätere Analyse möglich ist. Zuletzt soll eine Analyse der Filmdaten durchgeführt werden. Hierbei werden alle Einträge mithilfe eines k-Means-Clustering-Algorithmus einem Genre zugeordnet. Ebenfalls wird eine Ähnlichkeitsanalyse durchgeführt, womit eine Empfehlung ähnlicher Titel ermöglicht werden soll.\n",
     "\n",
     "Wir empfehlen das Durcharbeiten der folgenden Notebooks in chronologischer Reihenfolge.\n",
     "\n",
@@ -74,9 +74,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 - NLP",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -88,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
