--- a/notebooks/2_nlp_validation_schlaak_weise.ipynb
+++ b/notebooks/2_nlp_validation_schlaak_weise.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Datenvalidierung\n",
     "\n",
-    "Bevor eine konkrete Verarbeitung der Daten durchgeführt werden kann, sollte diese auf Korrektheit validiert werden. Es soll ebenso überprüft werden, ob sich diese Daten für eine weitere Analyse eignen. Hierzu dienen einzelne Einträge der Datenbasis als Stichprobe.\n",
+    "Bevor eine konkrete Verarbeitung der Daten durchgeführt werden kann, sollten diese auf Korrektheit validiert werden. Es soll ebenso überprüft werden, ob sich diese Daten für eine weitere Analyse eignen. Hierzu dienen einzelne Einträge der Datenbasis als Stichprobe.\n",
     "\n",
     "## Module importieren\n",
     "\n",
@@ -39,7 +39,7 @@
    "source": [
     "## Daten einlesen\n",
     "\n",
-    "Wir nutzen diesbezüglich das Modul `Pandas`, welches sich im Data Analytics-Bereich etabliert hat und eine geeignete Schnittstelle zur Darstellung und Verarbeitung von Daten bietet. Die `read_json()` Methode beinhaltet Funktionalität zum Einlesen unserer Datenbasis in ein DataFrame, ausgehend von einer `JSON`-Datei. Ein `DataFrame` stellt in Pandas eine Datenstruktur dar, welche Achsenbeschriftungen beinhaltet und arithmetische Operationen entlang der Achsen ohne viel Aufwand ermöglicht."
+    "Zum Einlesen der Daten nutzen wird das Modul `Pandas`, welches sich im Data Analytics-Bereich etabliert hat und eine geeignete Schnittstelle zur Darstellung und Verarbeitung von Daten bietet. Die `read_json()` Methode beinhaltet Funktionalität zum Einlesen der Datenbasis in ein *DataFrame*, ausgehend von einer `JSON`-Datei. Ein `DataFrame` stellt in Pandas eine Datenstruktur dar, welche Achsenbeschriftungen beinhaltet und arithmetische Operationen entlang der Achsen mit geringem Aufwand ermöglicht."
    ]
   },
   {
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ein Aufrufen der Variable `data`, welche unsere Datenbasis beinhaltet, in diesem Notebook, gibt uns diese aktuell unveränderte Datenbasis als Tabelle aus."
+    "Ein Aufrufen der Variable `data`, welche unsere Datenbasis beinhaltet, gibt uns die gecrawlten Daten als Tabelle aus."
    ]
   },
   {
@@ -384,7 +384,7 @@
    "source": [
     "## Tokenisierung\n",
     "\n",
-    "Um nun ebenfalls stichprobenartig unsere Daten auf Textebene validieren zu können, bietet es sich an, eine Tokenisierung der Zusammenfassung vorzunehmen. Hierbei nutzen wir das Modul `spaCy` für eine Segmentierung unseres Textes auf Wortebene. spaCy bietet generell Funktionalität zur Verarbeitung natürlicher Sprache, in unserem Fall der englischen Sprache. Als Beispiel wird der erste Eintrag, der am besten bewertete Film auf IMDb, der Datenbasis untersucht. Es handelt sich hierbei um den Film *The Shawshank Redemption (deutsch: Die Verurteilten)*.\n",
+    "Um nun ebenfalls stichprobenartig unsere Daten auf Textebene validieren zu können, bietet es sich an, eine Tokenisierung der Zusammenfassung vorzunehmen. Hierbei nutzen wir das Modul `spaCy` für eine Segmentierung unseres Textes auf Wortebene. SpaCy bietet Funktionalitäten zur Verarbeitung natürlicher Sprache, in unserem Fall der englischen Sprache. Als Beispiel wird der erste Eintrag der Datenbasis untersucht, also der am besten bewertete Film auf IMDb: Es handelt sich hierbei um den Film *The Shawshank Redemption (deutsch: Die Verurteilten)*.\n",
     "\n",
     "Wir benötigen dazu ein Sprachmodell, welches einzelne Token klassifizieren kann. Falls ein Importieren der Sprachmodelle scheitern sollte, können diese separat über den folgenden Befehl installiert werden:\n",
     "\n",
@@ -392,7 +392,7 @@
     "python -m spacy download <sprachmodell z.B. en_core_web_sm>\n",
     "```\n",
     "\n",
-    "Wir beginnen mit dem Laden eines schlanken englischen Sprachmodells (effizienter, nutzen später auch umfangreicheres Sprachmodell), um unsere Textdaten weiter analysieren zu können. `en_core_web_sm` enthält hierbei ein Vokabular, Syntax, Eigennamen der englischen Sprache, welches wir für die Analyse eigener Texte nutzen können. Wir erstellen eine Variable `document`, die das Ergebnis von `nlp()`, unsere tokenisierte Zusammenfassung, beinhaltet."
+    "Wir beginnen mit dem Laden eines schlanken, englischen Sprachmodells, um unsere Textdaten weiter analysieren zu können. Dieses schlanke Modell `en_core_web_sm` bringt den Vorteil mit sich, dass es effizienter ist, im späteren Verlauf soll ein umfangreicheres Sprachmodell zum Einsatz kommen. `en_core_web_sm` enthält ein Vokabular, Syntax und Eigennamen der englischen Sprache, welches wir für die Analyse eigener Texte nutzen können. Wir erstellen eine Variable `document`, die als Ergebnis von `nlp()`, unsere tokenisierte Zusammenfassung beinhaltet."
    ]
   },
   {
@@ -442,7 +442,7 @@
    "source": [
     "## Part-Of-Speech (POS)-Tagging\n",
     "\n",
-    "Um nun spezifischere Informationen zum Inhalt der Zusammenfassung zu erhalten, wenden wir das ein POS-Tagging, als Bestandteil der Vorverarbeitung der Daten, auf unsere zuvor zerlegten Token-Objekte an. Während des Zerlegens der Zusammenfassung in Token-Objekte, führt spaCy bereits ein POS-Tagging durch. Dafür trifft ein Convolutional Neural Networks (CNN) Vorhersagen über den Inhalt der Token. Um die Korrektheit des POS-Taggings von spaCy zu validieren, geben wir für jedes Token in unserem Dokument verschiedenste Merkmale aus. Wir nutzen hier für Pythons List Comprehension und übergeben dessen Ergebnis einem neuen DataFrame. \n",
+    "Um nun spezifischere Informationen zum Inhalt der Zusammenfassung zu erhalten, wenden wir ein POS-Tagging als Bestandteil der Vorverarbeitung der Daten auf unsere zuvor zerlegten Token-Objekte an. Während des Zerlegens der Zusammenfassung in Token-Objekte, führt spaCy bereits ein POS-Tagging durch. Dafür trifft ein _Convolutional Neural Network_ (CNN) Vorhersagen über den Inhalt der Token. Um die Korrektheit des POS-Taggings von spaCy zu validieren, geben wir für jedes Token in unserem Dokument verschiedene Merkmale aus. Wir nutzen hier Pythons List Comprehension und übergeben dessen Ergebnis einem neuen DataFrame. \n",
     "\n",
     "Merkmale:\n",
     "\n",
@@ -676,9 +676,9 @@
    "source": [
     "## Bag of Words und Worthäufigkeit\n",
     "\n",
-    "Zur Identifizierung inhaltlich wichtiger Informationen nutzen wir den Ansatz der *Bag of Words (BoW)*. Dabei versuchen wir mithilfe der Worthäufigkeit, die Relevanz einzelner Token zu messen und diese in einer neuen kompakten Struktur, bestehend aus einer Sammlung aller Wörter der Zusammenfassung, für die spätere Analyse zu sichern. Generell relevantere Token sollten uns wichtige Informationen über den Inhalt des Films liefern. Man muss jedoch beachten, dass es bestimmte Token gibt, die uns keine relevanten Informationen liefern. Dazu später mehr.\n",
+    "Zur Identifizierung inhaltlich wichtiger Informationen wird der Ansatz der *Bag of Words (BoW)* verwendet: Dabei wird mithilfe der Worthäufigkeit versucht, die Relevanz einzelner Tokens zu messen. Des weiteren wird die Tokenrelevanz in einer neuen, kompakten Struktur, bestehend aus einer Sammlung aller Wörter der Zusammenfassung, für die spätere Analyse gesichert. Relevantere Token liefern die charakteristischen Informationen über den Inhalt des jew. Films. Man muss jedoch beachten, dass es bestimmte Token gibt, die keine relevanten Informationen liefern. Dazu später mehr.\n",
     "\n",
-    "Wir erstellen zuerst ein eine neue Liste, welche alle Token der Zusammenfassung beinhaltet. Das Modul `Counter` bietet eine Schnittstelle zum Zählen der Häufigkeit aller Token."
+    "Wir erstellen zunächst ein eine neue Liste, welche alle Token der Zusammenfassung beinhaltet. Das Modul `Counter` bietet eine Schnittstelle zum Zählen der Häufigkeit aller Token."
    ]
   },
   {
@@ -697,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir erstellen ein neues DataFrame basierend auf diesem Bag of Words und sortieren unsere Frequenzen in absteigender Reihenfolge."
+    "Wir erstellen ein neues DataFrame basierend auf diesem Bag of Words und sortieren die Häufigkeiten in absteigender Reihenfolge."
    ]
   },
   {
@@ -823,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Im nächsten Schritt untersuchen wir die relevantesten Token der Zusammenfassung, indem wir ein Dictionary mit den 20 am häufigsten verwendeten Token erstellen. Das Modul Counter bietet hierfür die Methode `most_common()` an. Mithilfe von `Matplotlib` und `WordCloud` können wir diese in einer geeigneten Form visualisieren."
+    "Im nächsten Schritt werden die relevantesten Tokens der Zusammenfassung untersucht, indem ein Dictionary mit den 20 am häufigsten verwendeten Token erstellt wird. Das Modul Counter bietet hierfür die Methode `most_common()` an. Mithilfe von `Matplotlib` und `WordCloud` können diese in einer geeigneten Form visualisiert werden."
    ]
   },
   {
@@ -874,9 +874,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Man kann erkennen, dass es sich bei den 20 am häufigsten verwendeten Token hauptsächlich um Satzzeichen, Stoppwörter und Eigennamen handelt. Da es sich bei Stopwörtern und Satzzeichen jedoch um inhaltlich irrelevante Informationen handelt, erhalten wir nur wenige Informationen über den Inhalt des Film. Eine Reduzierung der Token , Vorverarbeitung der Daten, wird benötigt.\n",
+    "Man kann erkennen, dass es sich bei den 20 am häufigsten verwendeten Token hauptsächlich um Satzzeichen, Stoppwörter und Eigennamen handelt. Da es sich bei Stopwörtern und Satzzeichen jedoch um inhaltlich irrelevante Informationen handelt, erhalten wir nur wenige Informationen über den Inhalt des Films. Eine Reduzierung der Token durch eine Vorverarbeitung der Daten, wird benötigt.\n",
     "\n",
-    "Wir verfahren analog wie zuvor und erstellen eine Liste aller Token unseres Textes ignorieren jedoch alle Stoppwörter und Satzzeichen. Wir erhalten somit nur Wörter."
+    "Hierfür wird analog wie zuvor verfahren und eine Liste aller Tokens unseres Textes erstellt, wobei dieses Mal jedoch alle Stoppwörter und Satzzeichen ignoriert werden."
    ]
   },
   {
@@ -951,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Man kann erkennen, dass es sich bei den nun relevantesten Wörtern um deutlich inhaltsbezogenere Informationen handelt. Generell sind nun Eigennnamen sehr präsent. Diese erlauben zwar Rückschlüsse auf Figurenmerkmale, Schauspieler, Beziehungen der Figuren, jedoch wenig Rückschlüsse über die generelle Handlung des Films. Ebenso sind Verben durch ihren häufigen Einsatz weniger relevant. Beispielsweise wird die Grundform von *asks* in wahrscheinlich fast allen Filmen vorkommen. Neben Eigennamen entfernen wir nun ebenfalls alle Verben, da diese, gerade in lemmatisierter Form, zu häufig in allen Filmzusammenfassungen vorkommen werden und somit nur ein generelles Clustern der Daten erlauben."
+    "Man kann erkennen, dass es sich bei den nun relevantesten Wörtern um deutlich inhaltsbezogenere Informationen handelt. Generell sind nun Eigennnamen sehr präsent. Diese erlauben zwar Rückschlüsse auf Figurenmerkmale, Schauspieler, sowie Beziehungen der Figuren, liefern jedoch wenig Rückschlüsse über die generelle Handlung des Films. Ebenso sind Verben  weniger relevant. Beispielsweise wird die Grundform von *asks* in wahrscheinlich fast allen Filmen vorkommen. Neben Eigennamen werden nun ebenfalls alle Verben entfernt, da diese, gerade in lemmatisierter Form, zu häufig in allen Filmzusammenfassungen vorkommen werden und somit nur ein generelles Clustern der Daten erlauben."
    ]
   },
   {
@@ -1684,7 +1684,8 @@
    "source": [
     "## Eigennamen\n",
     "\n",
-    "spaCy verfügt des Weiteren über Schnittstellen zur Identifizierung der Typen von Eigennamen. Diese vernachlässigen wir zwar ab nun für unsere Analyse der Filmhandlung, könnten jedoch in einer späteren Optiierung hinzugezogen werden. Mit der integrierten `render()` Methode lassen sich Eigennamen im Text hervorheben. Dessen Typen werden ebenfalls dargestellt."
+    "spaCy verfügt des Weiteren über Schnittstellen zur Identifizierung der Typen von Eigennamen. Diese sollen zunächst nicht im Fokus der kommenden Ausführungen liegen und könnten lediglich in einer späteren Optimierung hinzugezogen werden. \n",
+    "Mit der integrierten `render()` Methode lassen sich Eigennamen im Text hervorheben. Dessen Typen werden hierbei ebenfalls dargestellt."
    ]
   },
   {
@@ -3292,7 +3293,7 @@
    "source": [
     "### Zeiten\n",
     "\n",
-    "Ermöglichen Rückschlüsse in welchem Jahrzehnt beispielsweise die Geschichte spielt und welche Zeitintervalle vorkommen."
+    "Ermöglichen beispielsweise Rückschlüsse in welchem Jahrzehnt die Geschichte spielt oder welche Zeitintervalle vorkommen."
    ]
   },
   {
@@ -3343,7 +3344,7 @@
    "source": [
     "## Fazit\n",
     "\n",
-    "Eine Validierung der Zusammenfassung des Films: Die Verurteilten mit Python, Pandas und spaCy ermöglicht eine Reduzierung der Textdaten auf inhaltlich relevante Informationen, welche in einer weiteren Analyse der Daten untersucht werden können. Im folgenden Kapitel soll nun eine Verarbeitung aller Dateneinträge angewendet werden, sowie eine Analyse genereller Information erfolgen.\n",
+    "Eine Validierung der Zusammenfassung des Films \"Die Verurteilten\" mit Python, Pandas und spaCy ermöglicht eine Reduzierung der Textdaten auf inhaltlich relevante Informationen, welche in einer weiteren Analyse der Daten untersucht werden können. Im folgenden Kapitel soll nun eine Verarbeitung aller Dateneinträge angewendet werden, sowie eine Analyse genereller Information erfolgen.\n",
     "\n",
     "* [Weiter zu: Verarbeitung aller Dateneinträge](./3_nlp_preprocessing_schlaak_weise.ipynb)\n",
     "* [Zurück zur Übersicht](./0_nlp_intro_schlaak_weise.ipynb)"
@@ -3359,9 +3360,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 - NLP",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3373,7 +3374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
