--- a/notebooks/3_nlp_preprocessing_schlaak_weise.ipynb
+++ b/notebooks/3_nlp_preprocessing_schlaak_weise.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Verarbeitung aller Dateneinträge\n",
     "\n",
-    "Nachdem wir nun anhand der Validierung eines einzelnen Dateneintrages eine geeignete Vorverarbeitung der Zusammenfassung erstellt haben, können wir diese nun auf alle Dateneinträge anwenden. Es soll ebenfalls untersucht werden, welche Auswirkungen die Verarbeitung der Daten auf dessen Varianz haben.\n",
+    "Nachdem nun anhand der Validierung eines einzelnen Dateneintrags eine geeignete Vorverarbeitung der Zusammenfassung erstellt wurde, können wir diese nun auf alle Dateneinträge anwenden. Es soll ebenfalls untersucht werden, welche Auswirkungen die Verarbeitung der Daten auf dessen Varianz haben.\n",
     "\n",
     "## Module importieren\n",
     "\n",
@@ -834,9 +834,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 - NLP",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -848,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
