--- a/notebooks/3_nlp_preprocessing_schlaak_weise.ipynb
+++ b/notebooks/3_nlp_preprocessing_schlaak_weise.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Verarbeitung aller Dateneinträge\n",
     "\n",
-    "Nachdem nun anhand der Validierung eines einzelnen Dateneintrags eine geeignete Vorverarbeitung der Zusammenfassung erstellt wurde, können wir diese nun auf alle Dateneinträge anwenden. Es soll ebenfalls untersucht werden, welche Auswirkungen die Verarbeitung der Daten auf dessen Varianz haben.\n",
+    "Nachdem mit Hilfe der Validierung eines einzelnen Dateneintrags eine geeignete Vorverarbeitung der Zusammenfassung erstellt wurde, können wir diese nun auf alle Dateneinträge anwenden. Es soll hierbei untersucht werden, welche Auswirkungen die Verarbeitung der Daten auf dessen Varianz haben.\n",
     "\n",
     "## Module importieren\n",
     "\n",
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Durch die `len()` Methode können wir uns einen Überblick über die Größe des Datensatz verschaffen. Dies ist wichtig, um zu validieren, ob alle Daten gecrawlt wurden."
+    "Durch die `len()` Methode können wir uns einen Überblick über die Größe des Datensatzes verschaffen. Dies ist wichtig, um zu validieren, ob alle Daten gecrawlt wurden."
    ]
   },
   {
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diese Anzahl bietet uns eine solide Datenbasis für kommende Verarbeitungsschritte. Neben der Anzahl an Filmeinträgen ist eine höhere Anzahl von Wörtern pro Zusammenfassung ebenfalls von Vorteil, da man somit mehr Informationen über den Filminhalt hat. Im Folgenden wird die gesamte Anzahl an Wörtern pro Zusammenfassung mit der effektiv für die Transformation genutzten Anzahl an Wörtern verglichen. Dieser Vergleich bietet uns Einblicke in den Verlust von Wörtern, wie beispielsweise Stoppwörtern, welche kein nützliches Wissen für die Analyse des Filminhaltes darstellen."
+    "Der Umfang des Datensatzes stellt eine solide Datenbasis für kommende Verarbeitungsschritte dar. Neben der Anzahl an Filmeinträgen ist eine höhere Anzahl von Wörtern pro Zusammenfassung ebenfalls von Vorteil, da man somit mehr Informationen über den Filminhalt hat. Im Folgenden wird die gesamte Anzahl an Wörtern pro Zusammenfassung mit der effektiv für die Transformation genutzten Anzahl an Wörtern verglichen. Dieser Vergleich liefert Einblicke in den Verlust von Wörtern, wie beispielsweise Stoppwörtern, welche kein nützliches Wissen für die Analyse des Filminhaltes darstellen."
    ]
   },
   {
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nach einer gründlichen Sichtung der Daten hat sich herausgestellt, dass es sich hierbei um einen Platzhalter handelt, wenn es noch keine Zusammenfassung für Einträge gibt."
+    "Eine gründliche Sichtung der Daten ergibt, dass es sich hierbei um einen Platzhalter handelt, wenn es noch keine Zusammenfassung für Einträge gibt."
    ]
   },
   {
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir bereinigen deswegen unseren Datensatz dahingehend, dass wir alle Einträge, welche über diesen Platzhalter in der Zusammenfassung verfügen, entfernen. Dies hat vor allem den Grund, dass wir aus diesem Platzhalter keine Informationen über den Inhalt des Films erreichen können. Die dabei entfernten Titel werden im Folgenden ausgegeben."
+    "Wir bereinigen deswegen unseren Datensatz dahingehend, dass wir alle Einträge, welche über diesen Platzhalter in der Zusammenfassung verfügen, entfernen. Dies ist dadurch begründet, dass aus diesem Platzhalter keine Informationen über den Inhalt des Films abzuleiten sind. Die dabei entfernten Titel werden im Folgenden ausgegeben."
    ]
   },
   {
@@ -258,7 +258,7 @@
    "source": [
     "## Analyse aller Dateneinträge\n",
     "\n",
-    "Im Folgenden untersuchen wir die Größe der Zusammenfassungen basieren auf dessen Wortanzahlen. Da wir im nächsten Kapitel den k-Means-Clustering-Algorithmus anwenden möchten, ist es sinnvoll die Varianz der Daten zu reduzieren, damit eine zufriedenstellende Aufteilung der Dateneinträge in Genres möglich ist. Wir iterieren hierfür über unsere gesamte nicht vorverarbeitete Datenbasis und zählen die Anzahl der Wörter (ohne Satzzeichen) unserer Zusammenfassungen. Diese speichern wir wiederum in einem DataFrame, welches uns weitere arithmetische Operationen erleichtert. Man beachte, dass es sich bei den hier resultierenden Token ebenfalls um Stoppwörter und Eigennamen handelt. Wir vorverarbeiten die Daten erst im nächsten Schritt um eine Vergleichwert zu haben."
+    "Im Folgenden untersuchen wir die Größe der Zusammenfassungen basierend auf dessen Wortanzahlen. Da wir im nächsten Kapitel den k-Means-Clustering-Algorithmus anwenden, ist es sinnvoll die Varianz der Daten zu reduzieren, damit eine zufriedenstellende Aufteilung der Dateneinträge in Genres möglich ist. Wir iterieren hierfür über die gesamte nicht vorverarbeitete Datenbasis und zählen die Anzahl der Wörter (ohne Satzzeichen) unserer Zusammenfassungen. Diese speichern wir wiederum in einem DataFrame, welches uns weitere arithmetische Operationen erleichtert. Man beachte, dass es sich bei den hier resultierenden Token ebenfalls um Stoppwörter und Eigennamen handelt. Wir verarbeiten die Daten erst im nächsten Schritt vor um einen Vergleichswert zu haben."
    ]
   },
   {
@@ -398,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir berechnen die durchschnittliche Anzahl an Wörtern unsere Daten und identifizieren Minima und Maxima. Wir nutzen zur Identifizierung der Minima und Maxima zuerst Pandas `argmin()` und `argmax()` Methode, welche uns die Indices des ersten Dateneintrages mit der minimalen/maximalen Anzahl, in diesem Fall Token, zurückgeben. Pandas `iloc[]` erlaubt es uns danach den Inhalt des Eintrages an einem bestimmten Index zurückzugeben. Wir entpacken dessen Ergebnis in zwei Variablen."
+    "Anschließend wird die durchschnittliche Anzahl an Wörtern berechnet und Minima und Maxima identifiziert. Wir nutzen zur Identifizierung der Minima und Maxima zuerst Pandas `argmin()` und `argmax()` Methode, welche uns die Indices des ersten Dateneintrages mit der minimalen/maximalen Anzahl and Token zurückgeben. Pandas `iloc[]` erlaubt es uns danach den Inhalt des Eintrages an einem bestimmten Index zurückzugeben. Wir entpacken dessen Ergebnis in zwei Variablen."
    ]
   },
   {
@@ -432,9 +432,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wie zu erkennen, unterscheiden sich die Extremwerte sehr.\n",
+    "Es zeigt sich, dass sich die Extremwerte sehr unterscheiden.\n",
     "\n",
-    "Wir nutzen ebenfalls die Standardabweichung unserer Wortanzahlen als Metrik für die Varianz des Datensatzes. Hierfür verwenden wir `Numpy`s `std()` Methode."
+    "Dies verdeutlicht die Standardabweichung der Wortanzahlen als Metrik für die Varianz des Datensatzes. Hierfür verwenden wir `Numpy`s `std()` Methode."
    ]
   },
   {
@@ -463,7 +463,7 @@
    "source": [
     "## Analyse der reduzierten Dateneinträge\n",
     "\n",
-    "Zur Analyse der vorverarbeitenden Dateneinträge verfahren wir analog wie zuvor, entfernen nur ebenso alle Stoppwörter, Eigennamen und Verben. Wir bilden ebenfalls die Grundform aller Wörter."
+    "Zur Analyse der vorverarbeitenden Dateneinträge verfahren wir analog und entfernen zusätzlich alle Stoppwörter, Eigennamen und Verben. Des Weiteren wird die Grundform aller Wörter gebildet."
    ]
   },
   {
@@ -632,9 +632,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es ist zu erkennen, dass wir die Varianz der Daten deutlich reduzieren konnten. Das BoW von *Neon Genesis Evangelion: The End of Evangelion* besteht nun lediglich aus 22 Wörtern. Wir müssen weiter untersuchen, ob eine zufriedenstellende Einteilung möglich ist. Andernfalls müssten wir diesen Film aus unserem Datensatz entfernen oder unsere Vorverarbeitung anpassen. \n",
+    "Es ist zu erkennen, dass wir die Varianz der Daten deutlich reduzieren konnten. Das BoW von *Neon Genesis Evangelion: The End of Evangelion* besteht nun lediglich aus 22 Wörtern. Nun wird weiter untersucht, ob eine zufriedenstellende Einteilung möglich ist. Andernfalls müssten wir diesen Film aus unserem Datensatz entfernen oder unsere Vorverarbeitung anpassen. \n",
     "\n",
-    "Vergleichen wir nun die durchschnittliche Anzahl der unvorverarbeiteten Wortanzahlen mit den Wortanzahlen der vorverarbeiteten Zusammenfassungen, so konnten wir unseren BoW um rund 76 % reduzieren. Die Folge sind weniger Daten, die wir verarbeiten müssen, dennoch wichtige Informationen der Handlungen beinhalten."
+    "Vergleichen man nun die durchschnittliche Anzahl der nicht vorverarbeiteten Wortanzahlen mit den Wortanzahlen der vorverarbeiteten Zusammenfassungen, so zeigt sich eine Reduktion des BoW um rund 76 %. Die Folge sind weniger Daten, die verarbeitet werden müssen, welche dennoch die wichtigen Informationen der Handlungen beinhalten."
    ]
   },
   {
@@ -689,7 +689,7 @@
    "source": [
     "## Worthäufigkeit der gesamten reduzierten Daten\n",
     "\n",
-    "Für ein besseres Verständnis unserer späteren Clusteranalyse berechnen wir die Worthäufigkeit unserer gesamten reduzierten Daten. Dies soll es uns später erleichtern Trends in den Clustern zu erkennen. Wir verfahren analog zur Verarbeitung und Analyse eines einzelnen Dateneintrages und visualisieren die 20 am häufigsten genutzten Wörter alle vorverarbeitenden Dateneinträge."
+    "Für ein besseres Verständnis unserer späteren Clusteranalyse berechnen wir die Worthäufigkeit unserer gesamten reduzierten Daten. Dies soll es uns später erleichtern, Trends in den Clustern zu erkennen. Wir verfahren analog zur Verarbeitung und Analyse eines einzelnen Dateneintrags und visualisieren die 20 am häufigsten genutzten Wörter aller vorverarbeitenden Dateneinträge."
    ]
   },
   {
@@ -755,7 +755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es lässt sich erkennen, dass es sich generell in den Handlungen der Filmen vermehrt um männliche Figuren und interessanterweise auch des Öfteren um Polizei dreht. Dies sind Informationen, die wir beim Clustering unsere Daten beachten sollten. Es könnte beispielsweise sein, dass Polizei eine wichtige Rolle in mehreren Clustern spielt."
+    "Es lässt sich beispielsweise erkennen, dass es sich generell in den Handlungen der Filmen vermehrt um männliche Figuren und um die Polizei dreht. Dies sind Informationen, die wir beim Clustering der Daten beachten sollten. Es könnte beispielsweise sein, dass _Polizei_ eine wichtige Rolle in mehreren Clustern spielt."
    ]
   },
   {
@@ -764,7 +764,7 @@
    "source": [
     "## Worthäufigkeit der Eigennamen\n",
     "\n",
-    "Nachdem nun generelle Informationen zu den Filminhalten erstellt wurden, können ebenso auch Eigennamen verarbeitet werden. Dies könnte interessant sein, um gängige Rollennamen, Spielorte, Jahr oder Schauspieler identifizieren zu können. In einer Optimierung des Projektes könnte beispielsweise versucht werden, die Wahrscheinlichkeit für das Genre eines Films basierend auf den mitwirkenden Schauspielern zu bestimmen."
+    "Nachdem nun generelle Informationen zu den Filminhalten gewonnen wurden, können ebenso auch Eigennamen verarbeitet werden. Dies könnte beispielsweise dahingehend genutzt werden, um gängige Rollennamen, Spielorte, Jahr oder Schauspieler identifizieren zu können. In einer Optimierung des Projektes könnte somit beispielsweise versucht werden, die Wahrscheinlichkeit für das Genre eines Films basierend auf den mitwirkenden Schauspielern zu bestimmen."
    ]
   },
   {
@@ -818,7 +818,7 @@
    "source": [
     "## Fazit\n",
     "\n",
-    "Eine Analyse und Vorverarbeitung aller Dateneinträge hat uns gezeigt, dass es manche Dateneinträge gibt, die nicht für eine inhaltliche Analyse infrage kommen, da sie noch über keine Zusammenfassung verfügen. Diese haben wir demnach aus unserem Datensatz entfernt. Wir konnten ebenfalls feststellen, dass eine Reduzierung der BoWs die Varianz unserer Daten verringert. Im folgenden Kapitel beschäftigen wir uns mit einer Vektorisierung unserer Daten zur Clusteranalyse und Bestimmung von Ähnlichkeiten innerhalb der Cluster.\n",
+    "Eine Analyse und Vorverarbeitung aller Dateneinträge hat gezeigt, dass es manche Dateneinträge gibt, die nicht für eine inhaltliche Analyse in Frage kommen, da sie noch über keine Zusammenfassung verfügen. Diese haben wir demnach aus unserem Datensatz entfernt. Ferner konnten wir feststellen, dass eine Reduzierung der BoWs die Varianz unserer Daten verringert. Im folgenden Kapitel beschäftigen wir uns mit einer Vektorisierung der Daten zur Clusteranalyse und Bestimmung von Ähnlichkeiten innerhalb der Cluster.\n",
     "\n",
     "* [Weiter zu: Verarbeitung aller Dateneinträge](./4_nlp_analysis_schlaak_weise.ipynb)\n",
     "* [Zurück zur Übersicht](./0_nlp_intro_schlaak_weise.ipynb)"
